--- a/Main/Web/static/css/index.css
+++ b/Main/Web/static/css/index.css
@@ -10,6 +10,7 @@
     display: inline-block;
     font-size: 46px;
     cursor: pointer;
+    overflow: hidden;
 }
 .button:hover {
     background-color: #575757;
@@ -30,6 +31,7 @@
     display: inline-block;
     font-size: 56px;
     cursor: pointer;
+    overflow: hidden;
 }
 .clear_button:hover {
     background-color: #575757;
@@ -50,6 +52,7 @@
     display: inline-block;
     font-size: 46px;
     cursor: pointer;
+    overflow: hidden;
 }
 .test_button_main:hover {
     background-color: #575757;
@@ -70,6 +73,7 @@
     display: inline-block;
     font-size: 46px;
     cursor: pointer;
+    overflow: hidden;
 }
 .test_button_update:hover {
     background-color: #575757;
@@ -268,8 +272,90 @@ input[type=number] {
     border-left: 3px solid rgb(73, 73, 73);
 }
 
+/*
+####################
+### File Manager ###
+####################
+*/
+
+.stats_file_ref {
+    background-color: #646464;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    width: 50%;
+    height: 50px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+    margin-top: -10px;
+    margin-bottom: 10px;
+    line-height: 45px;
+    overflow: hidden;
+}
+
 #list_files {
-    width: 100%;
-    height: 250px;
+    width: 80%;
+    height: fit-content;
+    max-height: 150px;
     overflow-y: scroll;
+}
+
+.name_file_ref {
+    background-color: #646464;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    line-height: 45px;
+    overflow: hidden;
+}
+
+#download_file_ref {
+    background-color: #646464;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    width: 60%;
+    height: 50px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 32px;
+    cursor: pointer;
+    line-height: 50px;
+}
+#download_file_ref:hover {
+    background-color: #575757;
+}
+#download_file_refs:active {
+    background-color: #4b4b4b;
+}
+
+#remove_file_ref {
+    background-color: #646464;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    width: 40%;
+    height: 50px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 32px;
+    cursor: pointer;
+}
+#remove_file_ref:hover {
+    background-color: #575757;
+}
+#remove_file_ref:active {
+    background-color: #4b4b4b;
 }
