--- a/Main/Web/templates/html/index.html
+++ b/Main/Web/templates/html/index.html
@@ -13,9 +13,15 @@
                     <p id="weight_text">Вес, <span id="units">гр.</span></p>
                     <span id="weight" style="font-size: 256px; line-height: 128px;">NA</span>
                     <br/>
-                    <br/>
-                    <button class="clear_button" onclick="SetZeroPoint()">Обнулить</button>
                 </div>
+                <div>
+                    <p id="weight_text">Ширина, мм</p>
+                    <span id="lenght" style="font-size: 256px; line-height: 128px;">NA</span>
+                    <br/>
+                    <br/>
+                    <br/>
+                </div>
+                <button class="clear_button" onclick="SetZeroPoint()">Обнулить</button>
                 <div>
                     <p id="title_menu_text">Единицы измерения</p>
                     <button class="button" onclick="ChangeSettings(false, null, null)">Граммы</button>
